test/literal/nil_arith.vp
//! stage: check
//! expect-compile: fail

pub fn main() : void
{
    let p = nil + 1;  // error: arithmetic on nil
}